--- a/backboard.html
+++ b/backboard.html
@@ -136,7 +136,7 @@
     }
   </script>
 
-  <script type="module" src="./src/js/all.js"></script>
+  <script type="module" src="./src/js/config.js"></script>
   <script type="module" src="./src/js/backboard.js"></script>
 </body>
 
