--- a/index.html
+++ b/index.html
@@ -329,46 +329,17 @@
       <option value="全部" selected>全部</option>
     </select>
     <ul class="productWrap">
+      <!-- renderProduct -->
     </ul>
   </section>
   <section class="shoppingCart">
     <h3 class="section-title">我的購物車</h3>
     <div class="overflowWrap">
+      <div class="wrap emptyCart ta-center fz-24">
+        <p>購物車內還沒有商品唷!</p>
+      </div>
       <table class="shoppingCart-table">
-        <tr>
-          <th width="40%">品項</th>
-          <th width="15%">單價</th>
-          <th width="15%">數量</th>
-          <th width="15%">金額</th>
-          <th width="15%"></th>
-        </tr>
-        <tr>
-          <td>
-            <div class="cardItem-title">
-              <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/HvT3zlU.png?raw=true" alt="">
-              <p>Antony 雙人床架／雙人加大</p>
-            </div>
-          </td>
-          <td>NT$12,000</td>
-          <td>1</td>
-          <td>NT$12,000</td>
-          <td class="discardBtn">
-            <a href="#" class="material-icons">
-              clear
-            </a>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <a href="#" class="discardAllBtn">刪除所有品項</a>
-          </td>
-          <td></td>
-          <td></td>
-          <td>
-            <p>總金額</p>
-          </td>
-          <td>NT$13,980</td>
-        </tr>
+        <!-- renderCart -->
       </table>
     </div>
   </section>
@@ -379,28 +350,28 @@
         <label for="customerName" class="orderInfo-label">姓名</label>
         <div class="orderInfo-inputWrap">
           <input type="text" class="orderInfo-input" id="customerName" placeholder="請輸入姓名" name="姓名">
-          <p class="orderInfo-message" data-message="姓名">必填</p>
+          <p class="orderInfo-message" data-message="姓名"></p>
         </div>
       </div>
       <div class="orderInfo-formGroup">
         <label for="customerPhone" class="orderInfo-label">電話</label>
         <div class="orderInfo-inputWrap">
           <input type="tel" class="orderInfo-input" id="customerPhone" placeholder="請輸入電話" name="電話">
-          <p class="orderInfo-message" data-message="電話">必填</p>
+          <p class="orderInfo-message" data-message="電話"></p>
         </div>
       </div>
       <div class="orderInfo-formGroup">
         <label for="customerEmail" class="orderInfo-label">Email</label>
         <div class="orderInfo-inputWrap">
           <input type="email" class="orderInfo-input" id="customerEmail" placeholder="請輸入 Email" name="Email">
-          <p class="orderInfo-message" data-message="Email">必填</p>
+          <p class="orderInfo-message" data-message="Email"></p>
         </div>
       </div>
       <div class="orderInfo-formGroup">
         <label for="customerAddress" class="orderInfo-label">寄送地址</label>
         <div class="orderInfo-inputWrap">
           <input type="text" class="orderInfo-input" id="customerAddress" placeholder="請輸入寄送地址" name="寄送地址">
-          <p class="orderInfo-message" data-message="寄送地址">必填</p>
+          <p class="orderInfo-message" data-message="寄送地址"></p>
         </div>
       </div>
       <div class="orderInfo-formGroup">
@@ -480,9 +451,11 @@
   </script>
   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>  
-  <script type="module" src="./src/js/all.js"></script>
-  <script type="module" src="./src/js/index.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+  <script src="./src/js/config.js"></script>
+  <script src="./src/js/validate.js"></script>
+  <script src="./src/js/index.js"></script>
 </body>
 
 </html>
