update:config.js

--- a/admin.html
+++ b/admin.html
@@ -136,8 +136,9 @@
     }
   </script>
 
-  <script type="module" src="./src/js/config.js"></script>
-  <script type="module" src="./src/js/backboard.js"></script>
+  <script src="./src/js/config.js"></script>
+  <script src="./src/js/c3.js"></script>
+  <script src="./src/js/admin.js"></script>
 </body>
 
 </html>
